Update toolchain doc